<resources>
    <string name="app_name">Smart City</string>
    <string name="text_app">An application that allows a quick and effective connection between the citizen and the city!</string>

    <string name="edit">Edit</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="observation">Observation</string>
    <string name="start">Start</string>
    <string name="personalNotes">Personal notes</string>
    <string name="save_note">Note saved!</string>
    <string name="save_note_error">Note not saved, fields empty</string>
    <string name="edit_note">Note edited!</string>
    <string name="edit_note_error">Note not edited, fields empty</string>
    <string name="delete_note">Note deleted!</string>
    <string name="delete_note_error">Note not deleted, fields empty</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_error">Invalid credentials, fill in the fields correctly</string>
    <string name="problems_list">Problems List</string>
    <string name="problems_map">Problems Map</string>
    <string name="problems_report">Problems Report</string>
    <string name="remember">Remember</string>
    <string name="title_activity_maps">Map</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="report">Report</string>
    <string name="insert_image">Insert Image</string>
    <string name="reportar_error">Problem not saved, fields empty</string>
    <string name="reportar_success">Problem saved</string>
    <string name="edit_problem">Problem edited!</string>
    <string name="edit_problem_error">Problem not edited, fields empty</string>
    <string name="delete_problem">Problem deleted!</string>
    <string name="delete_problem_error">Problem not deleted, fields empty</string>
    <string name="id_error_edit">You are not allowed to edit this problem!</string>
    <string name="welcome">Welcome </string>


</resources>