<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Problema_Reportar">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/type"
        android:inputType="textAutoComplete"
        android:minHeight="16dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/description"
        android:inputType="textAutoComplete"
        android:minHeight="16dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/imagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/insert_image"
        android:inputType="textAutoComplete"
        android:minHeight="16dp"
        android:textSize="18sp" />

    <!--<Button
        android:id="@+id/button_imagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/primaryColor"
        android:text="@string/insert_image"
        android:textColor="@color/primaryTextColor" />-->



    <Button
        android:id="@+id/button_reportar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/primaryColor"
        android:text="@string/report"
        android:onClick="reportar"
        android:textColor="@color/primaryTextColor" />

</LinearLayout>