<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/logo"
        android:layout_margin="50dp"/>

    <Button
        android:id="@+id/button_mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/primaryColor"
        android:text="@string/problems_map"
        android:onClick="problemas_mapa"
        android:textColor="@color/primaryTextColor" />

    <Button
        android:id="@+id/button_lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/primaryColor"
        android:text="@string/problems_list"
        android:onClick="problemas_lista"
        android:textColor="@color/primaryTextColor" />

    <Button
        android:id="@+id/button_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/primaryColor"
        android:text="@string/problems_report"
        android:onClick="problemas_reportar"
        android:textColor="@color/primaryTextColor" />
</LinearLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/primaryColor"
        android:text="Logout"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="logout"
        android:textColor="@color/primaryTextColor" />
</RelativeLayout>